# patterns

./: .travis.yml  CMakeLists.txt  Doxyfile
behavioral/: CMakeLists.txt  Strategy.h  StrategyTemplates.h  TemplateMethod.h  Track.h
creational/: CMakeLists.txt  FactoryMethod.h  Singleton.h
creational_design_patterns/: CMakeLists.txt
creational_design_patterns/abstract_factory/: CMakeLists.txt  example.cpp
creational_design_patterns/builder/: CMakeLists.txt  example.cpp
creational_design_patterns/factory_method/: CMakeLists.txt  example.cpp
tests/: CMakeLists.txt  CreationalPatternsTests.h  FactoryMethodTests.h  PatternsTests.cpp  StrategyTests.h
